# spectral-unions

./: .env.template  .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml  localization_horse.yaml  localization_human.yaml  spectral_union_horse.yaml  spectral_union_human.yaml
conf/nn/: default.yaml  localization_horse.yaml  localization_human.yaml  spectral_union_horse.yaml  spectral_union_human.yaml
conf/train/: default.yaml  localization.yaml  spectral_union.yaml
docs/: index.md
src/spectral_unions/: run.py  run_experiment.py
src/spectral_unions/data/: augmented_dataset.py  dataset_utils.py  datastructures.py  partial_dataset_v2.py  random_augmented_datasest.py  random_augmented_dataset.py  remesh_dataset.py
src/spectral_unions/losses/: losses.py
src/spectral_unions/metrics/: metrics.py
src/spectral_unions/modules/localization/: maskdecoders.py  maskdecoders_horse.py
src/spectral_unions/modules/union/: evals_encoding.py  positional_encoding.py
src/spectral_unions/pl_modules/: pl_module.py
src/spectral_unions/pl_modules/localization/: maskmodel_parametric.py  maskmodel_parametric_horse.py
src/spectral_unions/pl_modules/union/: parent_model_v2.py  union_model.py
src/spectral_unions/plot/: plot_utils.py
src/spectral_unions/spectral/: eigendecomposition.py  utils_spectral_3.py
src/spectral_unions/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
