[metadata]
name = spectral-unions
description = In this paper, we introduce a learning-based method to estimate the Laplacian spectrum of the union of partial non-rigid 3D shapes, without actually computing the 3D geometry of the union.
url = git@github.com:lucmos/spectral-unions.git
long_description = file: README.md
author = Luca Moschella
author_email = luca.moschella94@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core>=0.1.0,<0.2

    pytorch-lightning==1.5.10
    hydra-core==1.1.1
    wandb==0.12.11
    streamlit==1.8.1
    scipy==1.8.0
    scikit-learn==1.0.2
    rich==12.0.1
    dvc==2.10.0
    python-dotenv==0.20.0
    matplotlib==3.5.1
    stqdm==0.0.4
    plotly==5.6.0

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
